when click change to main, place set to seoul. and fixed overflow hidden

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,5 +39,4 @@
 
 body {
   font-family: "Chosunilbo_myungjo";
-  overflow: hidden;
 }
